# tiny_expander

./: .gitignore  CMakeLists.txt  app_config.h  format_code.sh  openocd.cfg  tusb_config.h
.cspell/: custom-dictionary-workspace.txt
app/: app.h  indicator.h  valve.h
io/: app_api.h  console.h  conversion.h  framework.h  freq.h  gpio.h  led.h
src/: main.cpp
src/app/: app.cpp  valve.cpp
src/io/: console.cpp  conversion.cpp  framework.cpp  led.cpp  usb_descriptors.cpp
watering/: fp-lib-table  sym-lib-table  watering.kicad_pcb  watering.kicad_prl  watering.kicad_pro  watering.kicad_sch  watering.kicad_sym  watering.step
watering/watering.pretty/: CMLR7843.kicad_mod  TINY2040.kicad_mod
